--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Ex-convicts -- Fiction'
 - !lcsh 'Paris (France) -- Fiction'
+- GITenberg
 title: De Ellendigen (Deel 2 van 5)
 url: http://www.gutenberg.org/ebooks/37663
